Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Custom CSS for elements that need more precise control */
-        .gradient-bg {
+        #mobile-menu-button {
+            padding: 8px;
+            border-radius: 4px;
+            transition: all 0.2s ease;
+        }
+        #mobile-menu-button:hover {
+            background-color: rgba(0, 153, 215, 0.1);
+        }
+.gradient-bg {
             background: linear-gradient(135deg, #0099D7 0%, #0077b3 100%);
         }
-        .nav-link:hover {
+        .hover\:bg-\[\#f0f9ff\]:hover {
+            background-color: #f0f9ff;
+        }
+.nav-link:hover {
             border-bottom: 3px solid #0077b3;
             margin-bottom: -3px;
         }
@@ -31,11 +42,15 @@
 </head>
 <body class="font-sans antialiased text-gray-800">
     <!-- Top Announcement Bar -->
-    <div class="bg-[#0099D7] text-white text-center py-2 px-4">
-        <p class="text-sm">COVID-19 updates: <a href="#" class="underline font-semibold">Vaccine information</a> | <a href="#" class="underline font-semibold">Visitor guidelines</a></p>
+    <div class="bg-[#0099D7] text-white py-2 px-4">
+        <div class="container mx-auto">
+            <div class="flex justify-center">
+                <p class="text-sm">COVID-19 updates: <a href="#" class="underline font-semibold hover:opacity-80 transition-all">Vaccine information</a> | <a href="#" class="underline font-semibold hover:opacity-80 transition-all">Visitor guidelines</a></p>
+            </div>
+</div>
+        </div>
     </div>
-
-    <!-- Main Navigation -->
+<!-- Main Navigation -->
     <header class="sticky top-0 z-50 bg-white text-[#0099D7] shadow-md">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
@@ -87,16 +102,15 @@
                         </button>
                     </div>
                     <a href="#" class="hidden md:block bg-[#0099D7] text-white px-6 py-3 rounded-full font-semibold hover:bg-[#0077b3] transition-all transform hover:scale-105 shadow-lg hover:shadow-xl">Patient Portal <i class="fas fa-arrow-right ml-1"></i></a>
-                    <button class="md:hidden text-white focus:outline-none" id="mobile-menu-button">
+                    <button class="md:hidden text-[#0099D7] focus:outline-none" id="mobile-menu-button">
                         <i class="fas fa-bars text-2xl"></i>
                     </button>
-                </div>
+</div>
             </div>
         </div>
-
         <!-- Mobile Menu -->
-        <div class="md:hidden hidden bg-white text-blue-800" id="mobile-menu">
-            <div class="container mx-auto px-4 py-2">
+        <div class="md:hidden hidden bg-white text-[#0099D7]" id="mobile-menu">
+<div class="container mx-auto px-4 py-2">
                 <div class="flex items-center mb-4">
                     <input type="text" placeholder="Search..." class="bg-gray-100 rounded-full py-2 px-4 text-blue-800 placeholder-gray-500 focus:outline-none focus:bg-gray-200 w-full">
                     <button class="ml-2 text-white">
@@ -109,8 +123,8 @@
                 <a href="#" class="block py-2 px-4 hover:bg-blue-100 rounded">Research & Innovation</a>
                 <a href="#" class="block py-2 px-4 hover:bg-blue-100 rounded">Education</a>
                 <a href="#" class="block py-2 px-4 hover:bg-blue-100 rounded">About Us</a>
-                <a href="#" class="block py-3 px-6 mt-4 bg-blue-600 text-white rounded-full text-center font-semibold hover:bg-blue-700 shadow-lg hover:shadow-xl transition-all">Patient Portal <i class="fas fa-arrow-right ml-1"></i></a>
-            </div>
+                <a href="#" class="block py-3 px-6 mt-4 bg-[#0099D7] text-white rounded-full text-center font-semibold hover:bg-[#0077b3] shadow-lg hover:shadow-xl transition-all transform hover:scale-105">Patient Portal <i class="fas fa-arrow-right ml-1"></i></a>
+</div>
         </div>
     </header>
 
@@ -128,8 +142,8 @@
         </div>
         <div class="container mx-auto px-4 -mt-8 relative z-10">
             <div class="bg-white rounded-lg shadow-lg p-6 grid grid-cols-1 md:grid-cols-4 gap-4">
-                <div class="flex items-center p-3 border-r border-gray-200">
-                    <div class="bg-[#e6f4fa] p-3 rounded-full mr-4">
+                    <div class="flex items-center justify-center p-3 border-r border-gray-200 hover:bg-[#f0f9ff] hover:cursor-pointer transition-all rounded-lg">
+<div class="bg-[#e6f4fa] p-3 rounded-full flex items-center justify-center mr-4 w-12 h-12">
                         <i class="fas fa-user-md text-[#0099D7] text-xl"></i>
                     </div>
                     <div>
@@ -137,34 +151,34 @@
                         <p class="text-sm text-gray-600">Search our network of specialists</p>
                     </div>
                 </div>
-                <div class="flex items-center p-3 border-r border-gray-200">
-                    <div class="bg-[#e6f4fa] p-3 rounded-full mr-4">
+                <div class="flex items-center p-3 border-r border-gray-200 hover:bg-[#f0f9ff] hover:cursor-pointer transition-all rounded-lg">
+                    <div class="bg-[#e6f4fa] p-3 rounded-full flex items-center justify-center mr-4 w-12 h-12">
                         <i class="fas fa-map-marker-alt text-[#0099D7] text-xl"></i>
                     </div>
-                    <div>
+<div>
                         <h3 class="font-bold">Find a Location</h3>
                         <p class="text-sm text-gray-600">Hospitals, clinics & more</p>
                     </div>
                 </div>
-                <div class="flex items-center p-3 border-r border-gray-200">
-                    <div class="bg-[#e6f4fa] p-3 rounded-full mr-4">
+                <div class="flex items-center p-3 border-r border-gray-200 hover:bg-[#f0f9ff] hover:cursor-pointer transition-all rounded-lg">
+                    <div class="bg-[#e6f4fa] p-3 rounded-full flex items-center justify-center mr-4 w-12 h-12">
                         <i class="fas fa-calendar-alt text-[#0099D7] text-xl"></i>
                     </div>
-                    <div>
+<div>
                         <h3 class="font-bold">Schedule Online</h3>
                         <p class="text-sm text-gray-600">Book appointments easily</p>
                     </div>
                 </div>
-                <div class="flex items-center p-3">
-                    <div class="bg-[#e6f4fa] p-3 rounded-full mr-4">
+                <div class="flex items-center p-3 hover:bg-[#f0f9ff] hover:cursor-pointer transition-all rounded-lg">
+                    <div class="bg-[#e6f4fa] p-3 rounded-full flex items-center justify-center mr-4 w-12 h-12">
                         <i class="fas fa-phone-alt text-[#0099D7] text-xl"></i>
                     </div>
-                    <div>
+<div>
                         <h3 class="font-bold">Call Us</h3>
                         <p class="text-sm text-gray-600">800-275-6401</p>
                     </div>
                 </div>
-            </div>
+</div>
         </div>
     </section>
 
@@ -463,5 +477,6 @@
             });
         });
     </script>
+<script src="https://huggingface.co/deepsite/deepsite-badge.js"></script>
 </body>
 </html>
